<resources>
    <string name="app_name">offload_master</string>
    <string name="find_slave_app">Find slave App</string>
    <string name="disconnect_slave_app">Disconnect slave app</string>
    <string name="start_diagnostic_tools">Diagnostic test</string>
    <string name="view_matrices">View matrices</string>
    <string name="multiply_matrices">Multiply matrices</string>
    <string name="benchmark_test">Benchmark test</string>
    <string name="slave_apps">Slave apps</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="title_activity_matrix_view">MatrixViewActivity</string>
    <string name="tab_text_1">Matrix A</string>
    <string name="tab_text_2">Matrix B</string>
    <string name="tab_text_3">A * B</string>
</resources>